--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
+
+html{
+    overflow-x: hidden;
+}
+
+body{
+    min-height: 100vh !important;
+}
