--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,6 +1,6 @@
 <!-- <footer class="bg-dark footer"> footer</footer> -->
 
-<footer class="d-flex flex-wrap justify-content-center w-100 align-items-center py-3 my-4 border-top row text-center">
+<footer class="d-flex flex-wrap justify-content-center w-100 align-items-center pt-4 my-2 border-top row text-center">
     <!-- <div class="col-md-4 d-flex row align-items-center"> -->
       <!-- <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
