--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,8 +1,100 @@
 nav{
-    max-width: 100vw;
+    width: 100vw;
     z-index: 999;
+    font-size: var(--font-size);
+    font-family: 'Quicksand', sans-serif;
+    padding-top: 7.5px !important;
+    padding-bottom: 7.5px !important;
+    position: fixed;
+    border-bottom: var(--bs-border-color-translucent) 1px solid;
+}
+
+hr{
+    margin-top: 6.05rem;
 }
 
 app-cart{
     margin-top: 100px !important;
+}
+
+.address{
+    margin-right: 4rem;
+}
+
+.cart, .cart a{
+    border-radius: 50px;
+    height: 50px;
+}
+
+.cart i, .cart span{
+    padding-top: 8px;
+}
+
+.cart:hover{
+    background-color: rgba(0, 0, 0, 0.05);
+    transition: 1s;
+}
+
+.cart a:hover{
+    color: var(--primary-text-color);
+}
+
+.cart span{
+    font-size: 14px;
+}
+
+.login{
+    color: var(--primary-bg-color);
+    font-weight: 400;
+}
+
+.login:hover{
+    --bs-text-opacity: 1;
+    transition: .9s;
+    -webkit-text-stroke-width: .5px;
+    -webkit-text-stroke-color: var(--primary-bg-color);
+    -webkit-text-fill-color: transparent;
+}
+
+.cart i{
+    margin-right: 8px;
+}
+
+select{
+    min-width: max-content;
+    padding-right: 5px;
+    border: none !important;
+    background-color: transparent;
+    color: rgba(0, 0, 0, 0.55);
+}
+
+select:focus{
+    border-style: 0 none !important;
+    border-color: transparent;
+    box-shadow: 0 0 !important;
+    outline: 0 !important;
+}
+
+.search{
+    display: block;
+    width: 350px;
+    /* margin-left: 3rem; */
+}
+
+span{
+    font-size: 9pt;
+}
+
+.address{
+    width: 200px;
+}
+
+.address span{
+    color: rgba(0, 0, 0, 0.55);
+    font-weight: bold;
+    font-size: 5pt;
+}
+
+.blank{
+    width: 211px;
 }
