--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,48 +1,55 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light px-4">
 
-    <div class="container-fluid">
-      <div class="logo">
-        <a class="navbar-brand" routerLink="/index">
-            <img src="../../../assets/images/logo.png" alt="" width="160" height="80" class="d-inline-block align-text-top">
-          </a>
-      </div>
-      <div>
-        <!-- <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button> -->
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item mx-4">
-              <a class="nav-link active" aria-current="page" routerLink="/index">Início</a>
-            </li>
-            <li class="nav-item mx-4">
-              <a class="nav-link" routerLink="/pedidos">Pedidos</a>
-            </li>
-        <select class="nav-item dropdown mx-4" >
-          <!-- <a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="true">
-            {{endereco[0]}}
-          </a>
-          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul> -->
-          <option *ngFor="let address of addresses" value="address" selected>{{address}}</option>
-          <option>Usar minha localização</option>
-        </select>
-            <li class="nav-item mx-4">
-              <a class="nav-link" (click)="toggleCart()">Sacola</a>
-            </li>
-            <!-- <li class="nav-item">
-              <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-            </li> -->
-          </ul>
-      </div>
-      </div>
+<nav *ngIf="showNav" class="navbar navbar-expand-lg navbar-light bg-light px-4">
+  
+  <div class="container-fluid">
+    <div class="logo">
+      <a class="navbar-brand" routerLink="/index">
+        <img src="../../../assets/images/logo.png" alt="" width="160" height="80" class="d-inline-block align-text-top">
+      </a>
     </div>
-  </nav>
-  <hr class="my-0">
+    <div>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item mx-2" *ngIf="logged">
+            <a class="nav-link fw-bold mt-2" aria-current="page" routerLink="/index">Início</a>
+          </li>
+          <li class="nav-item mx-2" *ngIf="logged">
+              <a class="nav-link fw-bold mt-2" routerLink="/pedidos">Pedidos</a>
+            </li>
+            <li class="search">
+            </li>
+            <li *ngIf="logged else blank" class="mt-2 address">
+              <!-- <span class="my-0 py-0">Bem,vindo usuario</span> -->
+              <app-address [addresses]="addresses"></app-address>
+            </li>
+            <ng-template #blank>
+              <li class="mx-3 blank"></li>
+            </ng-template>
+            <li *ngIf="!logged else loggedOut" class="login"> <div (click)="login()" class="d-flex justify-content-center align-items-center row my-1">
+              <i class="fa-solid fa-right-to-bracket fs-4 text-center"></i>
+              <span class="mx-auto my-0 py-0 text-center">ENTRAR</span>
+            </div>
+      </li>
+      <ng-template #loggedOut>
+        <li class="login"> <div (click)="logout()" class="d-flex justify-content-center align-items-center row my-1">
+          <i class="fa-solid fa-right-from-bracket fs-4 text-center"></i>
+          <span class="mx-auto my-0 py-0 text-center">SAIR</span>
+        </div>
+      </li>
+    </ng-template>
+    <li class="nav-item mx-4 px-3 py-1 cart">
+      <a class="nav-link primary-text-color" (click)="toggleCart()">
+        <i class="fa-solid fa-cart-shopping">
+          <!-- <i class="fa-solid fa-circle"></i> -->
+        </i>
+        <span>{{total | currency: 'BRL'}}</span>
+      </a>
+    </li>
+  </ul>
+</div>
+</div>
+</div>
+</nav>
+<hr *ngIf="showNav">
 
-  <app-cart [show]="show" (closeEvent)="onClose($event)"></app-cart>
+<app-cart *ngIf="showNav" [show]="show" (closeEvent)="onClose($event)"></app-cart>
