--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,21 +1,60 @@
-<div class="d-flex my-5 justify-content-around mt-5 row">
-    <h1 class="text-center">{{menu[0].company}}</h1>
-    <div *ngFor="let product of menu" class="card" style="width: 18rem; height: 250px; margin-top: 100px;">
-    
-    <div class="card-body mx-auto text-center" style="margin-top: -80px;" (click)="showInfo(product.id!)">
-        <img src="https://static-images.ifood.com.br/image/upload/t_medium/pratos/2f4e4610-0107-4efa-b485-c2adaa565479/202206141117_M404_i.jpg" class="card-img-top" style="width: 200px;">
-        <h5 class="card-title mt-4"> {{product.name}} </h5>
+<!-- <div class="spinner-border text-secondary"  id="loading" style="width: 3rem; height: 3rem;" role="status">
+    <span class="sr-only"></span>
+  </div> -->
+  <app-search [products]="menu" placeholder="Busque por produto" (filteredProducts)="filterProducts($event)"></app-search>
+<section class="d-flex mt-4 mb-5 mx-5 row" *ngIf="!notFound && !empty else emptyTemplate">
+    <h1 class="text-center h2">{{company}}</h1>
+    <div class="row row-cols-3 g-1 slide">
+    <div *ngFor="let product of filteredProducts" class="card pulse mx-5" style="width: 18rem; height: 250px; margin-top: 100px;">
+        
+        <div class="card-body mx-auto text-center" style="margin-top: -80px;" (click)="showInfo(product.id!)">
+            <img [src]="setImg(product.id!)" class="card-img-top" style="width: 200px; height: 150px;">
+            <h5 class="card-title mt-4"> {{product.name}} </h5>
         <hr style="border-top: dashed 1px black;">
         <!-- <p class="card-text">{{product.description}}</p> -->
         <p class="card-text"> {{product.price | currency : 'BRL'}} </p>
         <!-- <button class="btn btn-primary">Adicionar &nbsp;{{product.price * qty | currency: 'BRL'}}</button>
-        <div class="counter">
-            <span>-</span> 
-            <input type="text" [value] = "qty"> 
-            <span>+</span>
-        </div> -->
-        <!-- <div class="dish-action"><div class="dish-tooltip"><div class="dish-action__add-wrapper"><div class="dish-action__counter"><div class="marmita-counter" data-test-id="marmita-counter"><button type="button" tabindex="0" class="btn-icon btn-icon--primary btn-icon--size-m btn-icon--transparent marmita-counter__btn-decrement" aria-hidden="false" aria-label="Reduzir quantidade" disabled=""><span class="icon-marmita icon-marmita--minus-sign"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#EA1D2C" fill-rule="evenodd" d="M17.993 11c.556 0 1.007.444 1.007 1 0 .552-.45 1-1.007 1H6.007A1.001 1.001 0 0 1 5 12c0-.552.45-1 1.007-1h11.986z"></path></svg></span></button><div class="marmita-counter__value" aria-live="polite">1</div><button type="button" tabindex="0" class="btn-icon btn-icon--primary btn-icon--size-m btn-icon--transparent" aria-hidden="false" aria-label="Aumentar quantidade"><span class="icon-marmita icon-marmita--plus-sign"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#EA1D2C" fill-rule="evenodd" d="M13 11h4.993c.556 0 1.007.444 1.007 1 0 .552-.45 1-1.007 1H13v4.993C13 18.55 12.556 19 12 19c-.552 0-1-.45-1-1.007V13H6.007A1.001 1.001 0 0 1 5 12c0-.552.45-1 1.007-1H11V6.007C11 5.45 11.444 5 12 5c.552 0 1 .45 1 1.007V11z"></path></svg></span></button></div></div><button type="button" role="button" class="btn btn--default btn--size-m" aria-label="Adicionar prato" data-test-id="dish-action__add-button" theme="default" color="primary" target="" rel=""><div class="dish-action__add-button"><span>Adicionar</span><span>&nbsp;R$ 44,90</span></div></button></div></div></div> -->
+            <div class="counter">
+                <span>-</span> 
+                <input type="text" [value] = "qty"> 
+                <span>+</span>
+            </div> -->
+            <!-- <div class="dish-action"><div class="dish-tooltip"><div class="dish-action__add-wrapper"><div class="dish-action__counter"><div class="marmita-counter" data-test-id="marmita-counter"><button type="button" tabindex="0" class="btn-icon btn-icon--primary btn-icon--size-m btn-icon--transparent marmita-counter__btn-decrement" aria-hidden="false" aria-label="Reduzir quantidade" disabled=""><span class="icon-marmita icon-marmita--minus-sign"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#EA1D2C" fill-rule="evenodd" d="M17.993 11c.556 0 1.007.444 1.007 1 0 .552-.45 1-1.007 1H6.007A1.001 1.001 0 0 1 5 12c0-.552.45-1 1.007-1h11.986z"></path></svg></span></button><div class="marmita-counter__value" aria-live="polite">1</div><button type="button" tabindex="0" class="btn-icon btn-icon--primary btn-icon--size-m btn-icon--transparent" aria-hidden="false" aria-label="Aumentar quantidade"><span class="icon-marmita icon-marmita--plus-sign"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path fill="#EA1D2C" fill-rule="evenodd" d="M13 11h4.993c.556 0 1.007.444 1.007 1 0 .552-.45 1-1.007 1H13v4.993C13 18.55 12.556 19 12 19c-.552 0-1-.45-1-1.007V13H6.007A1.001 1.001 0 0 1 5 12c0-.552.45-1 1.007-1H11V6.007C11 5.45 11.444 5 12 5c.552 0 1 .45 1 1.007V11z"></path></svg></span></button></div></div><button type="button" role="button" class="btn btn--default btn--size-m" aria-label="Adicionar prato" data-test-id="dish-action__add-button" theme="default" color="primary" target="" rel=""><div class="dish-action__add-button"><span>Adicionar</span><span>&nbsp;R$ 44,90</span></div></button></div></div></div> -->
+        </div>
+        <!-- <button class="btn btn-primary" type="button" (click)="prev()">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+        <button class="btn btn-primary" type="button" (click)="next()">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button> -->
     </div>
-
-  </div>
 </div>
+</section>
+
+<ng-template #emptyTemplate>
+    <div>
+        <h1 class="text-center h2 mt-4" style="padding-right: 2rem;">{{company}}</h1>
+    </div>
+    <section *ngIf="empty">
+        <div class="d-flex justify-content-center align-items-center mb-5 py-4">
+            <img class="" src="../../../assets/images/boy.png" alt="" style="width: 300px; height: 300px;">
+            <div>
+                <span class="h1">Ops...</span>
+                <h5 class="text-center">Esta loja ainda não possui produtos cadastrados.</h5>
+            </div>
+        </div>
+    </section>
+    <section *ngIf="notFound" class=" d-flex justify-content-center align-items-center my-4">
+      <div class="col-3 mx-4">          
+        <img loading="lazy" src="https://static-images.ifood.com.br/image/upload/t_high/discoveries/001-search-empty-state.png" 
+        alt="Nenhum resultado encontrado" class="notFoundImg" crossorigin="anonymous">
+      </div>
+      <div class="col-3 align-items-center text-center">
+        <h5>Nenhum resultado encontrado</h5>
+        <p>Edite ou limpe os filtros para voltar</p>
+          <span class="primary-text-color fw-bold" (click)="filterProducts({filterBy: '', products: []})">Limpar filtros</span>
+      </div>
+    </section>
+</ng-template>
