--- a/src/app/components/register/customer/register.component.html
+++ b/src/app/components/register/customer/register.component.html
@@ -1,69 +1,42 @@
-<section class="py-1 px-1 mt-4">
-    <div class="container d-flex justify-content-center py-3 px-4">
-      
-      <form class="text-center" autocomplete="off" [formGroup]="registerForm">     
-  
-        <!-- CADASTRO PARTE 1  -->
-        <div>
-          <h1 class="h3 mb-3 fw-normal">Cadastro</h1>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" formControlName="cpf" placeholder=" ">
-            <label for="floatingInput">CPF</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="password" class="form-control" formControlName="password" placeholder=" ">
-            <label for="floatingPassword">Senha</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" formControlName="confirmPass" placeholder="name@example.com">
-            <label for="floatingInput">Confirme Senha</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" formControlName="name" placeholder="name@example.com">
-            <label for="floatingInput">Nome Completo</label>
-          </div>
-          <div class="form-floating mb-3">
+<section class="px-1">
+    <div class="container d-flex justify-content-center py-3 px-4 register row">
+      <i class="fa-solid fa-arrow-left fs-2"></i>
+      <div class="title mt-5">
+        <h1 class="h2 mb-3 fw-normal text-center">Cadastro</h1>
+        <h5 *ngIf="!step2" class="h6 mt-4 text-center py-2"> Informe o seu e-mail e crie uma senha para continuar</h5>
+        <h5 *ngIf="step2" class="h6 mt-4 text-center py-2"> Informe seus dados pessoais para finalizar</h5>
+      </div>
+      <div class="body d-flex justify-content-center mb-5 my-2">
+          <form class="text-center" autocomplete="off" [formGroup]="registerForm">     
+          <div *ngIf="!step2" class="form-floating mb-3">
             <input type="email" class="form-control" formControlName="email" placeholder="name@example.com">
             <label for="floatingInput">E-mail</label>
           </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" formControlName="phone" placeholder="name@example.com">
+          <div *ngIf="!step2" class="form-floating mb-3">
+            <input type="password" class="form-control" formControlName="password" placeholder=" ">
+            <label for="floatingPassword">Senha</label>
+          </div>
+          <div  *ngIf="!step2" class="form-floating mb-3">
+            <input type="password" class="form-control" formControlName="confirmPass" placeholder="name@example.com">
+            <label for="floatingInput">Confirme Senha</label>
+          </div>
+          <div *ngIf="step2" class="form-floating mb-3">
+            <input type="text" class="form-control" formControlName="cpf" placeholder=" " mask="000.000.000-00">
+            <label for="floatingInput">CPF</label>
+          </div>
+          <div *ngIf="step2" class="form-floating mb-3">
+            <input type="text" class="form-control" formControlName="name" placeholder="name@example.com">
+            <label for="floatingInput">Nome Completo</label>
+          </div>
+          <div *ngIf="step2" class="form-floating mb-3">
+            <input type="text" class="form-control" formControlName="phone" placeholder="name@example.com">
             <label for="floatingInput">Celular</label>
           </div>
-          <!-- </div> -->
-          <!-- <div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">CEP</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Logradouro</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Número</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Complemento</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Bairro</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">Cidade</label>
-          </div>
-          <div class="form-floating mb-3">
-            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-            <label for="floatingInput">UF</label>
-          </div> -->
+          <button *ngIf="!step2" class="btn primary-color d-block mx-auto mt-5 fs-5" (click)="toStep2()" >Continuar</button>
+          <button *ngIf="step2" class="btn primary-color d-block mx-auto mt-5 fs-5" (click)="createCustomer()">Cadastrar</button>
+              
+        </form>
         </div>
 
-        <button class="btn btn-primary" (click)="createCustomer()">Cadastrar</button>
-            
-      </form>
     </div>
   </section>
