component(cart): fix add duplicated items

--- a/src/app/components/cart/cart.component.css
+++ b/src/app/components/cart/cart.component.css
@@ -77,3 +77,10 @@ button{
 .removeCoupon{
     margin-left: 8px;
 }
+
+.spinner-grow{
+    width: 18px;
+    height: 18px;
+    margin-left: 9px;
+    margin-right: 9px;
+}
