--- a/src/app/components/register/customer/register.component.html
+++ b/src/app/components/register/customer/register.component.html
@@ -1,6 +1,6 @@
 <section class="px-1">
     <div class="container d-flex justify-content-center py-3 px-4 register row">
-      <i class="fa-solid fa-arrow-left fs-2"></i>
+      <i class="fa-solid fa-arrow-left fs-2" (click)="back()"></i>
       <div class="title mt-5">
         <h1 class="h2 mb-3 fw-normal text-center">Cadastro</h1>
         <h5 *ngIf="!step2" class="h6 mt-4 text-center py-2"> Informe o seu e-mail e crie uma senha para continuar</h5>
@@ -9,31 +9,67 @@
       <div class="body d-flex justify-content-center mb-5 my-2">
           <form class="text-center" autocomplete="off" [formGroup]="registerForm">     
           <div *ngIf="!step2" class="form-floating mb-3">
-            <input type="email" class="form-control" formControlName="email" placeholder="name@example.com">
+            <input type="email" class="form-control" formControlName="email" placeholder="name@example.com"
+            [ngClass]="{'is-invalid': 
+				registerForm.get('email')?.invalid &&
+				registerForm.get('email')?.touched, 
+				'is-valid':
+				registerForm.get('email')?.valid &&
+				registerForm.get('email')?.touched}">
             <label for="floatingInput">E-mail</label>
           </div>
           <div *ngIf="!step2" class="form-floating mb-3">
-            <input type="password" class="form-control" formControlName="password" placeholder=" ">
+            <input type="password" class="form-control" formControlName="password" placeholder=" "
+            [ngClass]="{'is-invalid': 
+            registerForm.get('password')?.invalid &&
+            registerForm.get('password')?.touched, 
+            'is-valid':
+            registerForm.get('password')?.valid &&
+            registerForm.get('password')?.touched}">
             <label for="floatingPassword">Senha</label>
           </div>
           <div  *ngIf="!step2" class="form-floating mb-3">
-            <input type="password" class="form-control" formControlName="confirmPass" placeholder="name@example.com">
+            <input type="password" class="form-control" formControlName="confirmPass" placeholder=" "
+            [ngClass]="{'is-invalid': 
+            registerForm.get('confirmPass')?.invalid &&
+            registerForm.get('confirmPass')?.touched, 
+            'is-valid':
+            registerForm.get('confirmPass')?.valid &&
+            registerForm.get('confirmPass')?.touched}">
             <label for="floatingInput">Confirme Senha</label>
           </div>
           <div *ngIf="step2" class="form-floating mb-3">
-            <input type="text" class="form-control" formControlName="cpf" placeholder=" " mask="000.000.000-00">
+            <input type="text" class="form-control" formControlName="cpf" placeholder=" " mask="000.000.000-00"
+            [ngClass]="{'is-invalid': 
+            registerForm.get('cpf')?.invalid &&
+            registerForm.get('cpf')?.touched, 
+            'is-valid':
+            registerForm.get('cpf')?.valid &&
+            registerForm.get('cpf')?.touched}">
             <label for="floatingInput">CPF</label>
           </div>
           <div *ngIf="step2" class="form-floating mb-3">
-            <input type="text" class="form-control" formControlName="name" placeholder="name@example.com">
+            <input type="text" class="form-control" formControlName="name" placeholder=" "
+            [ngClass]="{'is-invalid': 
+            registerForm.get('name')?.invalid &&
+            registerForm.get('name')?.touched, 
+            'is-valid':
+            registerForm.get('name')?.valid &&
+            registerForm.get('name')?.touched}">
             <label for="floatingInput">Nome Completo</label>
           </div>
           <div *ngIf="step2" class="form-floating mb-3">
-            <input type="text" class="form-control" formControlName="phone" placeholder="name@example.com">
+            <input type="text" class="form-control" formControlName="phone" placeholder=" "
+            [ngClass]="{'is-invalid': 
+            registerForm.get('phone')?.invalid &&
+            registerForm.get('phone')?.touched, 
+            'is-valid':
+            registerForm.get('phone')?.valid &&
+            registerForm.get('phone')?.touched}">
             <label for="floatingInput">Celular</label>
           </div>
           <button *ngIf="!step2" class="btn primary-color d-block mx-auto mt-5 fs-5" (click)="toStep2()" >Continuar</button>
-          <button *ngIf="step2" class="btn primary-color d-block mx-auto mt-5 fs-5" (click)="createCustomer()">Cadastrar</button>
+          <button *ngIf="step2" class="btn primary-color d-block mx-auto mt-5 fs-5" (click)="createCustomer()" [disabled]="!registerForm.valid">Cadastrar</button>
               
         </form>
         </div>
